# UR10e_RAMS

./: README.md  end_effector_test.py
my_moveit_config/: package.xml
my_moveit_config/config/: initial_positions.yaml  ros2_controllers.yaml  ur10e-test.ros2_control.xacro  ur10e-test.srdf  ur10e-test.urdf.xacro  ur10e.urdf
my_moveit_config/launch/: demo.launch.py  launch_ur10e.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur10e_launch.launch.py  warehouse_db.launch.py
universal_robots_ros2_description/: CMakeLists.txt  package.xml
universal_robots_ros2_description/launch/: ur10e_gazebo_launch.launch.py
universal_robots_ros2_description/urdf/: ur.urdf.xacro  ur10e.urdf  ur_mocked.urdf.xacro
